--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^5.0.10"
   }
 }
