--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.10"
   }
 }
